--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 .visually-hidden {
   position: absolute !important;
   width: 1px !important;
