--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -78,7 +78,8 @@ summary,
 time,
 mark,
 audio,
-video {
+video,
+button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -116,4 +117,25 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+ol,
+ul {
+  list-style: none;
+}
+a,
+button {
+  cursor: pointer;
+}
+button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  color: inherit;
+}
+a {
+  text-decoration: none;
+  color: inherit;
 }
